WinRT: Enable broadcasts

The CanBroadcast flag for QNetworkInterface indicates the ability to work
in broadcast mode. As WinRT natively supports udp broadcasts and they work out of the box
this flag should be set there.

Task-number: QTBUG-49026
Change-Id: I6623014287fe63dc1c353a6de265ebdf9114d013
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@theqtcompany.com>

cregit: 09487deeaea584b2abcc2b1049df2a8542bc113e https://github.com/qt/qtbase/commit/09487deeaea584b2abcc2b1049df2a8542bc113e